# MLOps-Course-Labs

./: .gitignore  Dockerfile  docker-compoes.yml  main.py  pyproject.toml
.github/workflows/: actions.yaml
app/: churn_schema.py  model_utils.py  preprocess.py
data/: model.joblib
scripts/: build_churn_pipeline.py
tests/: locust_test.py  test_main.py
