[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]

[project]
name = "churn-prediction-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "litestar[standard]>=2.21.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
]

[project.optional-dependencies]
telemetry = [
    "hyperdx-opentelemetry==0.3.0",
    "opentelemetry-distro==0.51b0",
    "opentelemetry-instrumentation-asgi==0.51b0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "locust>=2.32.0",
]
telemetry = [
    "hyperdx-opentelemetry==0.3.0",
    "opentelemetry-distro==0.51b0",
    "opentelemetry-instrumentation-asgi==0.51b0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
collect_ignore = ["locust_test.py"]
